update the styling for all the pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url({{ url_for('static', filename='/image/background1.jpg')}});
-    background-color: red;
+    background-image: url('../image/background1.jpg');
+    
 }
