--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -10,54 +10,63 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- My Style CSS -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
     
     <title>A Helping Paw</title>
   </head>
   
   <body>
-    <div class="container mt-5 mb-4" >
-        <div class="row">
-            <div class="col-md-1 d-flex justify-content-center">
-                <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-            </div>
-            <div class="col-md-4 navbar-brand">
-                <h1>
-                    A Helping Paw
-                </h1>
-            </div>
-            <div class="col-md-6 col-sm-12 float-md-right"> 
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Home Page</button>
-                
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Sign Up</button>
-                        
-                <!--Button for user to go to Log In page-->
-                <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button>
-            </div>
-        </div>
+    <div class="container-fuid bg-light">
+      <div class="container pt-5 pb-4">
+          <div class="row">
+              <div class="col-md-1 d-flex justify-content-center">
+                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+              </div>
+              <div class="col-md-4 navbar-brand">
+                  <h1>
+                      A Helping Paw
+                  </h1>
+              </div>
+              <div class="col-md-6 col-sm-12 float-md-right"> 
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+                  
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+                          
+                  <!--Button for user to go to Log In page-->
+                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+              </div>
+          </div>
+      </div>
     </div>
     
-    <<div class="container">
-        <!--Form for user to enter their particular to sign up account-->
-        <form action="{{ url_for('insert_user') }}" method="POST" >
-             <div>
-                <label>User Name</label>
-                <input id="userName" name="userName" type="text" required><br>
-                <label>User Email</label>
-                <input id="userEmail" name="userEmail" type="email" required><br>
-                <label>User Contact</label>
-                <input id="userContact" name="userContact" type="tel" required><br>
-            </div>
-            
-            <div>
-                <!--Button to add new user account-->
-                <button type="submit" name="action">Add User</button>
-            </div>
-        </form>
-    </div>
+    
+     <div class="row d-flex justify-content-center">
+          <div class="mt-5 d-none d-md-block">
+            <image src ="{{ url_for('static', filename='image/cat.jpg')}}" width="450" height="530">
+          </div>
+          
+          <div class="bg-light p-3 mt-5">
+              <!--Form for user to enter their particular to sign up account-->
+              <form action="{{ url_for('insert_user') }}" method="POST" >
+                 
+                    <h5>
+                      <label><h3>Sign Up An Account To Add Advertisment </h3></label><br><br>
+                      <label>User Name </label><br>
+                      <input id="userName" name="userName" type="text" class="form-control" required><br><br>
+                      <label>User Email </label><br>
+                      <input id="userEmail" name="userEmail" type="email" class="form-control" required><br><br>
+                      <label>User Contact </label><br>
+                      <input id="userContact" name="userContact" type="tel" class="form-control" required><br><br>
+                    </h5>
+               
+                      <!--Button to add new user account-->
+                      <button type="submit" name="action" class=" btn-lg btn-outline-dark">Sign Up</button>
+              </form>
+          </div>
+      </div>
 
     <div class="mb-5"></div>
     <!-- JavaScript -->
