--- a/templates/login.html
+++ b/templates/login.html
@@ -10,46 +10,56 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- My Style CSS -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
     
     <title>A Helping Paw</title>
   </head>
   
   <body>
-    <div class="container mt-5 mb-4" >
-        <div class="row">
-            <div class="col-md-1 d-flex justify-content-center">
-                <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-            </div>
-            <div class="col-md-4 navbar-brand">
-                <h1>
-                    A Helping Paw
-                </h1>
-            </div>
-            <div class="col-md-6 col-sm-12 float-md-right"> 
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Home Page</button>
+    <div class="container-fuid bg-light">
+      <div class="container pt-5 pb-4">
+          <div class="row">
+              <div class="col-md-1 d-flex justify-content-center">
+                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+              </div>
+              <div class="col-md-4 navbar-brand">
+                  <h1>
+                      A Helping Paw
+                  </h1>
+              </div>
+              <div class="col-md-6 col-sm-12 float-md-right"> 
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+                  
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+                          
+                  <!--Button for user to go to Log In page-->
+                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+              </div>
+          </div>
+      </div>
+    </div>
+
+        <div class="row d-flex justify-content-center">
+          <div class="mt-5 d-none d-md-block">
+            <image src ="{{ url_for('static', filename='image/dog.jpg')}}" width="250" height="300">
+          </div>
+          
+          <div class="bg-light p-5 mt-5 text-center">
+            <!--Form for user to Log in their account-->
+            <form action="{{url_for('mylogin')}}" method="POST" >
+              
+                    <label><h3>Enter Your User Name</h3></label><br><br>
+          
+                    <h5><input  id="login" name="login" type="text" required></h5><br>
                 
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Sign Up</button>
-                        
-                <!--Button for user to go to Log In page-->
-                <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button>
-            </div>
+                    <button type="submit" name="action" class="btn-lg btn-sm-md btn-outline-dark pr-3">Login</button>
+            </form>
+          </div>
         </div>
-    </div>
-    
-    <<div class="container">
-        <!--Form for user to Log in their account-->
-        <form action="{{url_for('mylogin')}}" method="POST" >
-            <div>
-                <label>Key in your user name:</label>
-                <input  id="login" name="login" type="text" required>
-                <button type="submit" name="action">Login</button>
-            </div>
-        </form>
-    </div>
+   
 
     <div class="mb-5"></div>
     <!-- JavaScript -->
