--- a/templates/searchResult.html
+++ b/templates/searchResult.html
@@ -10,39 +10,41 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <!-- My Style CSS -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/style.css')}}">
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
 
     
     <title>A Helping Paw</title>
   </head>
   
   <body>
-    <div class="container mt-5 mb-4" >
-        <div class="row">
-            <div class="col-md-1 d-flex justify-content-center">
-                <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-            </div>
-            <div class="col-md-4 navbar-brand">
-                <h1>
-                    A Helping Paw
-                </h1>
-            </div>
-            <div class="col-md-6 col-sm-12 float-md-right"> 
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Home Page</button>
-                
-                <!--Buttton foruser to go to Sign Up page-->
-                <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-sm-md btn-outline-dark pr-3 float-md-right">Sign Up</button>
-                        
-                <!--Button for user to go to Log In page-->
-                <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button>
-            </div>
-        </div>
+    <div class="container-fuid bg-light">
+      <div class="container pt-5 pb-4">
+          <div class="row">
+              <div class="col-md-1 d-flex justify-content-center">
+                  <image src ="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
+              </div>
+              <div class="col-md-4 navbar-brand">
+                  <h1>
+                      A Helping Paw
+                  </h1>
+              </div>
+              <div class="col-md-6 col-sm-12 float-md-right"> 
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
+                  
+                  <!--Buttton foruser to go to Sign Up page-->
+                  <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
+                          
+                  <!--Button for user to go to Log In page-->
+                  <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
+              </div>
+          </div>
+      </div>
     </div>
     
-    <div class="container d-flex justify-content-center p-2 mb-3 id="searchCss"">
+    <div class="container-fuid d-flex justify-content-center p-5 mb-5" id="searchCss">
     <!--Form for user to search for their pets through Pet Category-->
-        <form action="{{url_for('showsearch')}}" method="POST">
+        <form action="{{url_for('showsearch')}}" method="POST" class ="bg-light p-3">
             <div>
                 <div class = "d-flex justify-content-center">
                     <h4>Tell me your ideal pet to adopt:</h4>
@@ -57,11 +59,12 @@
         </form>
     </div>
     
-    <div class="container">
+    
+    <div class="container p-3 bg-light">
         
         {% for num in pet %}
           <div class="row"> 
-            <div>
+            <div class="p-3">
                 Advertisement ID: {{num._id}} <br>
                 Pet Name: {{num.petName}} <br>
                 Pet Category: {{num.petCat}} <br>
@@ -70,7 +73,7 @@
                 Age: {{num.age}} <br>
                 Description: {{num.description}}<br>
             </div>
-            <div>
+            <div class="p-3">
                 {% for row in user %}
                     {% if num.user_id == row._id %}
                         Posted by: {{ row.userName }}<br>
@@ -79,7 +82,7 @@
                     {% endif %}
                 {% endfor %}  
             </div>
-        </div>
+        </div><br><br>
         {% endfor %}
         
     </div><br>
