--- a/templates/mylogin.html
+++ b/templates/mylogin.html
@@ -53,8 +53,7 @@
               <form action="{{url_for('update_user')}}" method="POST">
                   {% for num in user%}
                     <h5>
-                      <label>User ID</label><br>
-                      <input id="user_id" name="user_id" type="text" value={{num._id}} class="form-control"><br><br>
+                      <input id="user_id" name="user_id" type="text" value={{num._id}} class="form-control d-none"><br><br>
                       <label>User Name</label><br>
                       <input id="myName" name="myName" type="text" value={{num.userName}} class="form-control" required><br><br>
                       <label>User Email</label><br>
