--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -29,10 +29,10 @@
                   </h1>
               </div>
               <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Sign Up page-->
+                  <!--Buttton for user to go to Homepage-->
                   <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
                   
-                  <!--Buttton foruser to go to Sign Up page-->
+                  <!--Buttton for user to go to Sign Up page-->
                   <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
                           
                   <!--Button for user to go to Log In page-->
