--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -29,7 +29,7 @@
                   </h1>
               </div>
               <div class="col-md-6 col-sm-12 float-md-right"> 
-                  <!--Buttton foruser to go to Sign Up page-->
+                  <!--Buttton foruser to go to Homepage-->
                   <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
                   
                   <!--Buttton foruser to go to Sign Up page-->
