add a textarea in description

--- a/templates/my_adv.html
+++ b/templates/my_adv.html
@@ -64,7 +64,7 @@
                         <label>Age: </label><br>
                         <input id="age" name="age" type="text" value='{{num.age}}' class="form-control" required><br><br>
                         <label>Description: </label><br>
-                        <input id="description" name="description" type="text" class="form-control" rows="5" value='{{num.description}}' class="form-control" required ><br>
+                        <textarea class="form-control" rows="5" name="description" type="text" required>{{num.description}}</textarea>
                       </h5>    
                       
                         <!--Button for user to update their advertisment-->
