--- a/templates/SearchPage.html
+++ b/templates/SearchPage.html
@@ -57,7 +57,7 @@
             <div class="row d-flex justify-content-center">
 
                 <!-- Textbox to key in the Pet to search -->
-                <input id="searchPetCat" name="searchPetCat" type="text" required>
+                <input id="searchPetCat" name="searchPetCat" type="text"  placeholder="dog, cat, bird, ..." required>
 
                 <!-- Button to search for Pet -->
                 <button type="submit" name="action" class="btn-lg">Search</button>
