--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -68,11 +68,11 @@
                     <input id="userName" name="userName" type="text" class="form-control" required><br><br>
 
                     <!-- Textbox to key in User Email -->
-                    <label>User Email </label><br>
+                    <label>Email </label><br>
                     <input id="userEmail" name="userEmail" type="email" class="form-control" required><br><br>
 
                     <!-- Textbox to key in User Contact Number -->
-                    <label>User Contact </label><br>
+                    <label>Contact </label><br>
                     <input id="userContact" name="userContact" type="tel" class="form-control" required><br><br>
                 </h5>
 
