--- a/templates/deleteAdv.html
+++ b/templates/deleteAdv.html
@@ -1,52 +1,9 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block content %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- My Style CSS -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-
-    <title>A Helping Paw</title>
-</head>
-
-<body>
-    <div class="container-fuid bg-light">
-        <div class="container pt-5 pb-4">
-            <div class="row">
-
-                <!-- Logo -->
-                <div class="col-md-1 d-flex justify-content-center">
-                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-                </div>
-
-                <!-- Website Name -->
-                <div class="col-md-4 navbar-brand">
-                    <h1>
-                        A Helping Paw
-                    </h1>
-                </div>
-
-                <!-- Navigation Button -->
-                <div class="col-md-6 col-sm-12 float-md-right">
-                    <!--Buttton for user to go to Homepage-->
-                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-
-                    <!--Buttton for user to go to Sign Up page-->
-                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-
-                    <!--Button for user to go to Log In page-->
-                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-                </div>
-            </div>
-        </div>
-    </div>
-
+<section id="signup" class="signup-section">
     <div class="container d-flex justify-content-center p-3 mb-5">
         <h3>
             <!--Form to confirm delete advertisment-->
@@ -59,19 +16,12 @@
 
                 <!-- Button to delete the advertisment -->
                 <div>
-                    <button type="submit" name="action">Confirm Delete?</button>
+                    <button type="submit" name="action" class="btn btn-primary mx-auto">Confirm Delete?</button>
                 </div>
 
             </form>
         </h3>
     </div>
+</section>
 
-    <div class="mb-5"></div>
-    <!-- JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
