--- a/templates/searchResult.html
+++ b/templates/searchResult.html
@@ -1,70 +1,29 @@
-<!doctype html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block content %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <!-- My Style CSS -->
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-
-    <title>A Helping Paw</title>
-</head>
-
-<body>
-    <div class="container-fuid bg-light">
-        <div class="container pt-5 pb-4">
-            <div class="row">
-
-                <!-- Logo -->
-                <div class="col-md-1 d-flex justify-content-center">
-                    <image src="{{ url_for('static', filename='image/Logo.png')}}" width="100" height="100">
-                </div>
-
-                <!-- Website Name -->
-                <div class="col-md-4 navbar-brand">
-                    <h1>
-                        A Helping Paw
-                    </h1>
-                </div>
-
-                <!-- Navigation Button -->
-                <div class="col-md-6 col-sm-12 float-md-right">
-                    <!--Buttton for user to go to Homepage-->
-                    <button type="button" onclick="window.location.href='{{url_for('mysearch')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Home Page</button>&nbsp &nbsp
-
-                    <!--Buttton for user to go to Sign Up page-->
-                    <button type="button" onclick="window.location.href='{{url_for('add_user')}}'" class="btn-lg btn-outline-dark pr-3 float-md-right">Sign Up</button>&nbsp &nbsp
-
-                    <!--Button for user to go to Log In page-->
-                    <button type="button" onclick="window.location.href='{{url_for('login')}}'" class=" btn-lg btn-outline-dark float-md-right">Login</button><br><br>
-                </div>
-            </div>
-        </div>
+<section id="signup" class="signup-section">
+    <div class="text-center">
+        <h3>Search for the Pet</h3>
     </div>
-
-    <div class="container-fuid d-flex justify-content-center p-5 mb-5">
+    
+    <div class="container-fuid d-flex justify-content-center m-5">
+        
         <!--Form for user to search for their pets through Pet Category-->
-        <form action="{{url_for('showsearch')}}" method="POST" class="bg-light p-3">
-            <div class="d-flex justify-content-center">
-                <h4>Enter your ideal pet to adopt:</h4>
-            </div><br>
+          <form action="{{url_for('showsearch')}}" method="POST">
 
             <div class="row d-flex justify-content-center">
 
                 <!-- Textbox to key in the Pet to search -->
-                <input id="searchPetCat" name="searchPetCat" type="text" required>
-
+                <input id="searchPetCat" name="searchPetCat" type="text"  placeholder="dog, cat, bird, ..." required><br>
+                
                 <!-- Button to search for Pet -->
-                <button type="submit" name="action" class="btn-lg">Search</button>
+                <button type="submit" name="action" class="btn btn-primary">Search</button>
 
             </div>
-        </form>
-    </div>
+          </form>
+        </div>
 
     <h5>
         <div class="container p-3 bg-light">
@@ -94,12 +53,6 @@
         </div><br>
     </h5>
 
-    <div class="mb-5"></div>
-    <!-- JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-</body>
+</section>
 
-</html>
+{% endblock %}
