--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/grayscale.min.css')}}">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/grayscale.css')}}">
 
 </head>
 
